<resources>
    <string name="app_name">Football League</string>
    <string name="football_league">Football League</string>
    <string name="ok">OK</string>
    <string name="area_name">Area Name:</string>
    <string name="competition_code">Competition Code:</string>
    <string name="competition_type">Competition Type:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="number_of_available_sessions">Number of available sessions:</string>
    <string name="last_update">Last update:</string>
</resources>