<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="competitionDetails"
            type="com.srhan.footballleague.domain.model.CompetitionDetailsModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">

        <LinearLayout
            android:id="@+id/competitionNameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backArrowImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_6sdp"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/white"
                android:src="@drawable/back_arrow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/competitionNameTv"
                style="@style/TitleTextStyle"
                android:text="@{competitionDetails.name}" />


        </LinearLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/emblemImageView"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:scaleType="centerCrop"
            app:imageUrl="@{competitionDetails.emblem}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/competitionNameLinearLayout" />


        <LinearLayout
            android:id="@+id/areaNameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emblemImageView">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BoldTextStyle"
                android:text="@string/area_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/areaNameTextView"
                style="@style/NormalTextStyle"
                android:text="@{competitionDetails.areaName}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/codeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/areaNameLinearLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BoldTextStyle"
                android:text="@string/competition_code" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/codeTextView"
                style="@style/NormalTextStyle"
                android:text="@{competitionDetails.code}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/competitionTypeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/codeLinearLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BoldTextStyle"
                android:text="@string/competition_type" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/typeTextView"
                style="@style/NormalTextStyle"
                android:text="@{competitionDetails.type}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/startDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/competitionTypeLinearLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BoldTextStyle"
                android:text="@string/start_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/startDateTextView"
                style="@style/NormalTextStyle"
                android:text="@{competitionDetails.startDate}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/startEndLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startDateLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BoldTextStyle"
                android:text="@string/end_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/endDateTextView"
                style="@style/NormalTextStyle"
                android:text="@{competitionDetails.endDate}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/numberOfAvailableSeasonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startEndLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BoldTextStyle"
                android:text="@string/number_of_available_sessions" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/numberOfAvailableSeasonsTextView"
                style="@style/NormalTextStyle"
                android:text="@{Integer.toString(competitionDetails.numberOfAvailableSeasons)}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastUpdatedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numberOfAvailableSeasonsLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BoldTextStyle"
                android:text="@string/last_update" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lastUpdatedTextView"
                style="@style/NormalTextStyle"
                android:text="@{competitionDetails.lastUpdated}" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>